Fix incorrect background image path causing black screen on mobile

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -44,7 +44,7 @@ body {
 	font-weight: 300;
 
 	&.mobile {
-		background-image: url(media/cabin-bg-mobile.jpg);
+		background-image: url(../images/cabin-bg-mobile.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
